<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/backPrimary"
        android:contentDescription="@string/home"
        android:scaleType="fitCenter"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <TextView
        android:id="@+id/hat"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/backPrimary"
        android:contentDescription="@string/header_text"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/header_text"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/backPrimary"
        android:contentDescription="@string/menu"
        android:scaleType="fitCenter"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>