<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backAccent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_strategy"
        style="@android:style/TextAppearance.DeviceDefault.Widget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/b_strategy_state"
        android:gravity="center"
        android:text="@string/strategy"
        android:textAllCaps="false"
        android:textColor="@color/b_strategy_text_state"
        app:layout_constraintEnd_toStartOf="@+id/b_model"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.17" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_model"
        style="@android:style/TextAppearance.DeviceDefault.Widget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/b_model_state"
        android:gravity="center"
        android:text="@string/model"
        android:textAllCaps="false"
        android:textColor="@color/b_model_text_state"
        app:layout_constraintEnd_toStartOf="@+id/b_basic_v"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.17" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_basic_v"
        style="@android:style/TextAppearance.DeviceDefault.Widget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/b_basic_state"
        android:gravity="center"
        android:text="@string/basic_v"
        android:textAllCaps="false"
        android:textColor="@color/b_basic_v_text_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.17" />

    <RadioGroup
        android:id="@+id/rg_years"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_basic_v"
        app:layout_constraintWidth_percent="0.15">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/textMiddle" />

        <RadioButton
            android:id="@+id/rb_year_1"
            style="@android:style/TextAppearance.DeviceDefault.Widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_1"
            android:textColor="@color/textMiddle" />

        <RadioButton
            android:id="@+id/rb_year_2"
            style="@android:style/TextAppearance.DeviceDefault.Widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_2"
            android:textColor="@color/textMiddle" />

        <RadioButton
            android:id="@+id/rb_year_3"
            style="@android:style/TextAppearance.DeviceDefault.Widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_3"
            android:textColor="@color/textMiddle" />

        <RadioButton
            android:id="@+id/rb_year_4"
            style="@android:style/TextAppearance.DeviceDefault.Widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_4"
            android:textColor="@color/textMiddle" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_main_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_small_charts"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_small_charts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/backPrimary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/fl_small_chart_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fl_small_chart_4"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.327" />

        <FrameLayout
            android:id="@+id/fl_small_chart_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fl_small_chart_5"
            app:layout_constraintEnd_toStartOf="@+id/fl_small_chart_3"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintStart_toEndOf="@+id/fl_small_chart_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.327" />

        <FrameLayout
            android:id="@+id/fl_small_chart_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fl_small_chart_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.327" />

        <FrameLayout
            android:id="@+id/fl_small_chart_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.327" />

        <FrameLayout
            android:id="@+id/fl_small_chart_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fl_small_chart_6"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintStart_toEndOf="@+id/fl_small_chart_4"
            app:layout_constraintWidth_percent="0.327" />

        <FrameLayout
            android:id="@+id/fl_small_chart_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.47"
            app:layout_constraintWidth_percent="0.327" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>